# money-collector

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml
collector/: .env.template  __main__.py  collector.py  main.py
